# SystemRejestracji

./: README.md
client/: CMakeLists.txt  client.h  dialog_prescribtion.cpp  dialog_prescribtion.h  dialog_prescribtion.ui  doctorwindow.cpp  doctorwindow.h  doctorwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  patientwindow.cpp  patientwindow.h  patientwindow.ui  regwindow.cpp  regwindow.h  regwindow.ui  schedule_dialog.cpp  schedule_dialog.h  schedule_dialog.ui
lib/: com.grpc.pb.cc  com.grpc.pb.h  com.pb.cc  com.pb.h  com.proto  exam_results.cpp  exam_results.h  med_event.cpp  med_event.h  protocompile.sh  schedule.cpp  schedule.h
server/: CMakeLists.txt  app_control.cpp  app_control.h  db_backup.sql  main.cpp  projekt.db  server.cpp  server.h
